--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/my-image-name:${{ env.TAG }}
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/ranchercli:${{ env.TAG }}
 
     - name: Push the Docker image to GitHub Container Registry
-      run: docker push ghcr.io/${{ github.repository_owner }}/my-image-name:${{ env.TAG }}
+      run: docker push ghcr.io/${{ github.repository_owner }}/ranchercli:${{ env.TAG }}
